:bug: Fix: outfit 기능 버그 수정 및 swagger 인증 추가
